First try at skin, css, ses routing system, environment interceptor for multiple environment setups, pdf-flashpaper integration,
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@21 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/uni-form.css
+++ b/src/includes/css/uni-form.css
@@ -52,10 +52,13 @@
   display:block;
   width:53.5%; /* Required property */
 }
+/* commented to get right styles for Editor.
 .uniForm .blockLabels textarea{
-  width:53%; /* Required property */
+  width: 53%; 
   height:12em; 
 }
+*/
+
 .uniForm .blockLabels .formHint{
   width:45%; /* Required property */
 }
