* ajax display on history view ( I <3 jQuery) * replace active on history view * delete version on history view * edit field now grows if you enter more text in it
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@48 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -365,3 +365,13 @@ form.search input.textbox:focus {
 	border-bottom: 1px dashed #EFF0F1; 	
 	border-top: 1px dashed #EFF0F1;	
 }
+
+/* AJAX UI ELements */
+.loading {
+	background-image:  url("../images/loading.gif");
+	background-position: left center;
+	background-repeat: no-repeat;
+	padding: 2px 0 2px 20px;
+	height: 18px;
+	
+}
