* implementation of the remoting layer * basic modal dialog on content preview
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@51 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -375,3 +375,10 @@ form.search input.textbox:focus {
 	height: 18px;
 	
 }
+
+/* Overlay */
+#modalOverlay {background-color:#000; cursor:wait;}
+
+/* Container */
+#modalContainer {height:70%; width:50%; left:50%; top:15%; left:25%; background-color:#fff; border:3px solid #ccc;}
+#modalContainer #basicModalContent {padding:8px;}
