--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -11,7 +11,6 @@
 ********************************************/ 
 
 /* top elements */
-* { margin: 0;	padding: 0; }
 
 body {
 	margin: 0; padding: 0;
@@ -29,6 +28,21 @@ a {
 a:hover {
 	color: #CC0001; 
 	background-color: inherit;
+}
+#buttonLinks{
+	margin: 0px; 
+	font-size: 100%; 
+	font-family: Verdana, sans-serif; 
+	border: 1px solid #CCC; 
+	background: #FFFFFF url(../images/headerbg.gif) repeat-x bottom left; 
+	padding: 5px; 
+	font-weight: bold; 
+	color: #333;
+	cursor: pointer;
+}
+#buttonLinks:hover{
+	background: #FFFFF0;
+	border: 1px inset #ccc;
 }
 
 /* headers */
@@ -60,17 +74,6 @@ h3 {
 h4{
 	font-size: 100%;
 	color: #003366;
-}
-
-/* images */
-img {
-	border: 2px solid #CCC;
-}
-img.float-right {
-  margin: 5px 0px 10px 10px;  
-}
-img.float-left {
-  margin: 5px 10px 10px 0px;
 }
 
 ul, ol {
@@ -163,7 +166,7 @@ textarea{
 input[type=text], input[type=password], input[type=checkbox], select { 
 	font: normal 12px Verdana, sans-serif;
 	border: 1px solid #d7d7d7;
-	padding:2px;
+	padding: 3px;
 }
 input[type=text], input[type=password], input[type=checkbox], select { padding: .20em .3em }
 input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=checkbox]:focus, select:focus {
@@ -343,7 +346,7 @@ form.search input.textbox:focus {
 	text-align: center;  
 	line-height: 1.5em;	
 	font-size: 95%;
-	margin-top:100px;
+	margin-top: 250px;
 }
 .footer a { 
 	text-decoration: none; 
@@ -355,6 +358,8 @@ form.search input.textbox:focus {
 .float-right { float: right; }
 .align-left  { text-align: left; }
 .align-right { text-align: right; }
+.hidden { display: none; }
+.show { display:block; }
 
 /* display and additional classes  */
 .clear {	clear: both; }
@@ -382,3 +387,18 @@ form.search input.textbox:focus {
 /* Container */
 #modalContainer {height:70%; width:50%; left:50%; top:15%; left:25%; background-color:#fff; border:3px solid #ccc;}
 #modalContainer #basicModalContent {padding:8px;}
+
+/* Wiki ToolBars */
+#wikiToolbarRight{
+	float: right;
+	font-size: 80%;
+	margin-right: 5px;
+}
+#wikiToolbarRight label{
+	margin:5px 0;
+	font-weight: bold;
+	display: inline;
+}
+#wikiToolbarRight select{
+	font-size: 10px;
+}
