fix for preview, and some tidy up on the modal display.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@54 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -387,6 +387,11 @@ form.search input.textbox:focus {
 /* Container */
 #modalContainer {height:70%; width:50%; left:50%; top:15%; left:25%; background-color:#fff; border:3px solid #ccc;}
 #modalContainer #basicModalContent {padding:8px;}
+#modalData { 
+	padidng: 0px; 
+	margin: 0px;
+	text-align: left;
+}
 
 /* Wiki ToolBars */
 #wikiToolbarRight{
