--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -14,7 +14,9 @@
 
 body {
 	margin: 0; padding: 0;
-	font: 70%/1.5 Verdana, Tahoma, Arial, Helvetica, sans-serif;
+	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
+	font-size: 74%;
+	line-height: 1.5;
 	color: #333; 
 	background: #FFF url(../images/bg.gif) repeat-x;	
 }
@@ -24,6 +26,7 @@ a {
 	color: #003366;
 	background-color: inherit;
 	text-decoration: none;
+	border-bottom: 1px dotted #003366;
 }
 a:hover {
 	color: #CC0001; 
@@ -47,7 +50,6 @@ a:hover {
 
 /* headers */
 h1, h2, h3, h4 {
-	font-family: Arial, 'Trebuchet MS', Sans-Serif;
 	font-weight: bold;
 	color: #333;
 	padding: 0;		
@@ -62,7 +64,7 @@ h1 {
 	letter-spacing: .5px;
 }
 h2 {
-	font-size: 14px;
+	font-size: 16px;
 	border-bottom:1px solid #AAAAAA;
 	padding-bottom:0.17em;
 	padding-top:0.5em;;	
@@ -72,32 +74,33 @@ h3 {
 	color: #003366;		
 }
 h4{
-	font-size: 100%;
-	color: #003366;
+	font-size: 12px;
+	color: #45729F;
 }
 
 ul, ol {
-	margin: 10px 20px;
 	padding: 0 20px;
 }
 
 code {
-  margin: 10px 0;
-  padding: 10px;
-  text-align: left;
-  display: block;
-  overflow: auto;  
-  font: 500 1.1em/1.5em 'Lucida Console', 'courier new', monospace;
-  /* white-space: pre; */
-  background: #FAFAFA;
-  border: 1px solid #f2f2f2;  
-  border-left: 4px solid #CC0000;
+	background-color: #f9f9f9;
+}
+pre {
+	overflow:auto;
+}
+pre {
+	font-size: 12px;
+	background-color:#F9F9F9;
+	border:1px dashed #2F6FAB;
+	color:black;
+	line-height:1.1em;
+	padding:1em;
 }
 acronym {
   cursor: help;
   border-bottom: 1px solid #777;
 }
-blockquote {
+blockquote{
 	margin: 10px;
  	padding: 0 0 0 32px;  	
   	background: #FAFAFA url(../images/quote.gif) no-repeat 5px 10px !important; 
@@ -107,7 +110,30 @@ blockquote {
 	font-weight: bold; 
 	min-height: 50px; 
 }
-
+#toc {
+	margin:1em 0pt;
+}
+#toc, .toc, .mw-warning {
+	background-color:#F9F9F9;
+	border:1px solid #AAAAAA;
+	font-size:95%;
+	padding:5px;
+}
+#toc #toctitle, .toc #toctitle, #toc .toctitle, .toc .toctitle {
+	text-align:center;
+}
+#toc h2, .toc h2 {
+	border:medium none;
+	display:inline;
+	font-size:100%;
+	font-weight:bold;
+	padding:0pt;
+}
+#toc ul, .toc ul {
+	margin-left:0pt;
+	padding-left: 10pt;
+	text-align:left;
+}
 /* form elements */
 form {
 	margin:10px; padding: 0 5px;
@@ -196,10 +222,11 @@ input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=c
 	color: #ffffff;
 	background-color: inherit;
 	text-decoration: none;
+	border-bottom: none;
 }
 .tablelisting a:hover {
 	color: #CC0001; 
-	background-color: inherit;
+	background-color: inherit;	
 }
 /* search form */
 form.search {
@@ -402,13 +429,14 @@ form.search input.textbox:focus {
 #modalOverlay {background-color:#000; cursor:wait;}
 
 /* Container */
-#modalContainer {height:70%; width:50%; left:50%; top:15%; left:25%; background-color:#fff; border:3px solid #ccc;}
+#modalContainer {height:70%; width:70%; left:15%; top:15%; background-color:#fff; border:3px solid #ccc; overflow:auto;}
 #modalContainer #basicModalContent {padding:8px;}
 #modalData { 
-	padidng: 0px; 
+	padding: 0px; 
 	margin: 0px;
 	text-align: left;
 }
+
 
 /* Wiki ToolBars */
 #wikiToolbarRight{
