cleaner overflow based view of the previous versions. (Let me know what you think)
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@67 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -429,7 +429,16 @@ form.search input.textbox:focus {
 #modalOverlay {background-color:#000; cursor:wait;}
 
 /* Container */
-#modalContainer {height:70%; width:70%; left:15%; top:15%; background-color:#fff; border:3px solid #ccc; overflow:auto;}
+#modalContainer {
+	height:70%; 
+	width:70%; 
+	left:15%; 
+	top:15%; 
+	background-color:#fff; 
+	border:3px solid #ccc; 
+	overflow:auto;
+}
+
 #modalContainer #basicModalContent {padding:8px;}
 #modalData { 
 	padding: 0px; 
