New User Profile Tab complete. User can now - update details - update password
Finilized security interceptor based on permissions.
The hashtype is now set in the coldbox.xml for reuse.
Many updates to look and left over code. Cleanup.

git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@78 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -189,6 +189,11 @@ fieldset{
 	border: 1px solid #ddd;
 	margin: 10px;
 }
+legend{
+	color: #003366;
+	font-weight: bold;
+	font-size: 12px;
+}
 textarea{
 	font: normal 12px Verdana, sans-serif;
 	border: 1px solid #d7d7d7;
@@ -465,4 +470,9 @@ form.search input.textbox:focus {
 }
 #wikiToolbarRight select{
 	font-size: 10px;
+}
+
+/* Message box */
+.cbox_messagebox{
+	margin: 10px;
 }
