* created a generic 'confirm' box using simplemodal * implemented it on rollback, deleteversion and delete page.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@79 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -449,7 +449,20 @@ form.search input.textbox:focus {
 	overflow:auto;
 }
 
-#modalContainer #basicModalContent {padding:8px;}
+/*confirm container */
+#modalConfirmContainer {
+	height:auto; 
+	width:20%;
+	left: 40%;
+	top: 30%; 
+	background-color:#fff; 
+	border:3px solid #ccc;
+}
+
+
+#modalContainer #basicModalContent #modalConfirmContainer {
+	padding:8px;
+}
 #modalData { 
 	padding: 0px; 
 	margin: 0px;
