Tweaked the main layout to be (a) a bit more SEO friendly, and (b) more customisable.
Let me know if you hate it.

git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@86 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -290,10 +290,14 @@ form.search input.textbox:focus {
 #header-logo #logo {
 	position: absolute;
 	top: 3px; left: 5px;
+	margin: 0; padding: 0;
+}
+
+#header-logo #logo h1 {
 	font: bold 30px "trebuchet MS", Arial, Tahoma, Sans-Serif;
 	margin: 0; padding: 0;
 	letter-spacing: -1px;
-	color: #000;
+	color: #000;	
 }
 
 /* navigation tabs */
