--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -491,5 +491,25 @@ form.search input.textbox:focus {
 
 /* Message box */
 .cbox_messagebox{
+	font-size: 13px;
+	font-weight: bold;
 	margin: 10px;
+}
+.cbox_messagebox_info{
+	background: #D1E6EF url(../images/cmsg.gif) no-repeat scroll .5em 50%;
+	border: 1px solid #2580B2;
+	margin: 0.3em;
+	padding: 0pt 1em 0pt 3.5em;
+}
+.cbox_messagebox_warning{
+	background: #FFF2CF url(../images/wmsg.gif) no-repeat scroll .5em 50%;
+	border: 1px solid #2580B2;
+	margin: 0.3em;
+	padding: 0pt 1em 0pt 3.5em;
+}
+.cbox_messagebox_error{
+	background: #FFFFE0 url(../images/emsg.gif) no-repeat scroll .5em 50%;
+	border: 1px solid #2580B2;
+	margin: 0.3em;
+	padding: 0pt 1em 0pt 3.5em;
 }
