* cleaned up the css a little on the loader image * added it to the wiki edit page (#38) * had to change the json format in the ColdBox config, as it blew up on the new daily build -not sure why.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@90 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -259,6 +259,18 @@ form.search input.textbox:focus {
 	background: #fff;
 }
 
+/* loader */
+div.formloader {
+	margin:5px 5px 0px 0px;
+	display: none;
+}
+
+div.formloader p {
+	color: #CC0000;
+	font-weight: bold;
+	margin-bottom: 1em;
+}
+
 /**********************************
   LAYOUT 
 ***********************************/
