--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -259,6 +259,13 @@ form.search input.textbox:focus {
 	background: #fff;
 }
 
+/* buttons */
+
+.buttons {
+	text-align: right;
+	margin-top: 10px;
+}
+
 /* loader */
 div.formloader {
 	margin:5px 5px 0px 0px;
@@ -270,6 +277,24 @@ div.formloader p {
 	font-weight: bold;
 	margin-bottom: 1em;
 }
+
+/* resizable text area */
+div.grippie {
+	background:#EEEEEE url(../images/grippie.png) no-repeat scroll center 2px;
+	border-color:#DDDDDD;
+	border-style:solid;
+	border-width:0pt 1px 1px;
+	cursor:s-resize;
+	height:9px;
+	overflow:hidden;
+}
+.resizable-textarea textarea {
+	display:block;
+	margin-bottom:0pt;
+	width:100%;
+	height: 20%;
+}
+
 
 /**********************************
   LAYOUT 
