External Link css for displaying different links for external and internal links
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@97 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -33,6 +33,10 @@ a:hover {
 	background-color: inherit;
 	border-bottom: 1px dotted #CC0001;
 }
+a.externallink{
+	background:transparent url(../images/external.png) no-repeat scroll left center;
+	padding-left: 13px;
+}
 #buttonLinks{
 	margin: 0px; 
 	font-size: 100%; 
