--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -54,7 +54,7 @@ a.externallink{
 }
 
 /* headers */
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
 	font-weight: bold;
 	color: #333;
 	padding: 5px 0 0 0;		
@@ -80,6 +80,10 @@ h3 {
 }
 h4{
 	font-size: 12px;
+	color: #45729F;
+}
+
+h5 {
 	color: #45729F;
 }
 
