--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -236,9 +236,17 @@ input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=c
 .tablelisting td{
 	padding: 5px;
 }
-.tablelisting a {
+.tablelisting th a {
 	color: #ffffff;
 	background-color: inherit;
+	text-decoration: none;
+	border-bottom: none;
+}
+.tablelisting th a:hover {
+	color: #CC0001; 
+	background-color: inherit;	
+}
+.tablelisting a {
 	text-decoration: none;
 	border-bottom: none;
 }
