--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -56,6 +56,7 @@ a.noborder{
 	border: 1px inset #ccc;
 }
 
+
 /* headers */
 h1, h2, h3, h4, h5 {
 	font-weight: bold;
@@ -161,6 +162,14 @@ label {
 	font-weight:bold;
 	margin:5px 0;
 }
+label.error{
+	color: red;
+}
+.inlineLabel {
+	display: inline;
+	font-weight: bold;
+	margin:5px 0;
+}
 input {
 	padding: 2px;
 	border:1px solid #eee;
@@ -192,8 +201,11 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
 }
 input[type=button][disabled], input[type=submit][disabled],input[type=reset][disabled] {
  background: #f6f6f6;
- border-style: solid;
  color: #999;
+}
+input[disabled]:hover{
+	background: #f6f6f6;
+	color: #999;
 }
 fieldset{
 	background-color: #f5f5f5;
@@ -213,12 +225,17 @@ textarea{
 }
 input[type=text], input[type=password], input[type=checkbox], select { 
 	font: normal 12px Verdana, sans-serif;
+	color:#777;
 	border: 1px solid #d7d7d7;
-	padding: 3px;
+	padding: 5px;
+	background: #FFFFFF url(../images/topfade.gif) repeat-x scroll center top;
 }
-input[type=text], input[type=password], input[type=checkbox], select { padding: .20em .3em }
+input[type=text], input[type=password], input[type=checkbox], select { padding: .30em }
 input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=checkbox]:focus, select:focus {
 	border: 1px solid #886;
+}
+input[type=text].error, input[type=password].error, input[type=checkbox].error, textarea.error, select.error { 
+	border:1px dotted red;
 }
 .tablelisting{
 	border: 1px solid #cccccc;
@@ -549,21 +566,8 @@ div.grippie {
 	background-color: #FCF9C3;
 	border: 1px solid #AF3D15;
 }
-
-
-/* Wiki ToolBars */
-#wikiToolbarRight{
-	float: right;
-	font-size: 10px;
-	margin-right: 5px;
-}
-#wikiToolbarRight label{
-	margin:5px 0;
-	font-weight: bold;
-	display: inline;
-}
-#wikiToolbarRight select{
-	font-size: 10px;
+.pagingTabsCarrousel{
+	margin-top:5px;	
 }
 
 /* Message box */
@@ -596,3 +600,44 @@ div.grippie {
 	margin: 5px 10px 0px 0px;
 	float: right;
 }
+
+/* Validation */
+input.invalidLookupInput, textarea.invalidLookupInput, .invalidLookupInput{
+	border: 1px dotted #F00000;
+	background:#FFECE6 url(../images/topfade.gif) repeat-x scroll center top;
+}
+
+/* RTE */
+.frameBody
+{
+    font-family:sans-serif;
+    font-size:12px;
+    margin:0;
+    width:100%;
+    height:100%;
+}
+
+.rte-zone
+{
+	width:500px;
+	margin:0;
+	padding:10px;
+	height: 100px;
+	border:1px #999 solid;
+	background: white;
+    clear:both;
+}
+
+.rte-toolbar{ overflow:hidden; }
+
+.rte-toolbar a, .rte-toolbar a img {
+	border:0;
+}
+
+.rte-toolbar p {
+    float:left;
+    margin:0;
+    padding-right: 8px;
+}
+
+/* @end */
