--- a/src/includes/scripts/markitup/sets/wiki/style.css
+++ b/src/includes/scripts/markitup/sets/wiki/style.css
@@ -67,6 +67,9 @@
 .markItUp .nowikiGen a {
 	background-image:url(images/nowiki.png);
 }
+.markItUp .categories a {
+	background-image:url(images/categories.gif);
+}
 
 
 .markItUp .preview a {
