user registration is now available. and working.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@155 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -506,6 +506,7 @@ div.grippie {
 .inline { display: inline; }
 .clear { clear: both; }
 .red   { color: #CC0000; }
+.green { color: green}
 .blue   { color: #003366; }
 .bold { font-weight: bold; }
 
