CSS udpates, diff updates.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@165 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/wiki.show.css
+++ b/src/includes/css/wiki.show.css
@@ -46,3 +46,7 @@ div#categories ul li {
 	padding: 0 10px 0 0;
 	font-weight: normal;
 }
+#downloadFormatsBar{
+	margin:30px 0px 10px 0px;
+	text-align:center;
+}
