--- a/src/includes/css/page.showHistory.css
+++ b/src/includes/css/page.showHistory.css
@@ -41,6 +41,31 @@ div.overflow {
 	height: 300px;
 }
 
+/* LEGEND */
+#legend {
+	font-size:9px;
+	line-height:1em;
+	margin:1em 0;
+	padding:0.5em;
+}
+#legend h3{
+	margin-bottom:10px;	
+}
+#legend dl, #legend dd {
+	display:inline;
+	float:left;
+	margin:0 0.5em 0 0;
+	padding:0;
+}
+#legend dt {
+	border:1px solid #999999;
+	float:left;
+	height:0.8em;
+	margin:0.1em 0.5em 0.1em 2em;
+	overflow:hidden;
+	width:0.8em;
+}
+
 /* DIFF */
 table.diff { width: 100%; }
 .diff tr, table.diff { 
@@ -53,8 +78,8 @@ table.diff { width: 100%; }
 	margin: 0px; 
 	padding: 3px; 
 	border-collapse: collapse; 
-	font-family: monspace;
-	font-size: 12px;
+	font-family: "Courier New";
+	font-size: 11px;
 	font-weight: normal;
 	line-height: normal;
 	vertical-align: top; 
@@ -67,12 +92,12 @@ table.diff { width: 100%; }
 	border-bottom: 1px solid #ccc;
 	text-align: right; 
 }
-.diff .ins { background-color: #afa; }
-.diff .insLight { background-color: #EFFFEF; }
-.diff .del { background-color: #faa; }
-.diff .delLight{ background-color: #FFEFEF;}
-.diff .upd { background-color: #aaf; }
-.diff .diffContent{
+.ins { background-color: #afa; }
+.insLight { background-color: #EFFFEF; }
+.del { background-color: #faa; }
+.delLight{ background-color: #FFEFEF;}
+.upd { background-color: #aaf; }
+.diffContent{
 	width:100%;
 	overflow:auto;
 	height:auto;
