--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -15,7 +15,7 @@
 body {
 	margin: 0; padding: 0;
 	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
-	font-size: 70%;
+	font-size: 74%;
 	line-height: 1.5;
 	color: #333; 
 	background: #FFF url(../images/bg.gif) repeat-x;	
@@ -55,7 +55,6 @@ a.noborder{
 	background: #FFFFF0;
 	border: 1px inset #ccc;
 }
-
 
 /* headers */
 h1, h2, h3, h4, h5 {
@@ -138,7 +137,7 @@ blockquote{
 #toc h2, .toc h2 {
 	border:medium none;
 	display:inline;
-	font-size: 12px;
+	font-size: 16px;
 	font-weight:bold;
 	padding:0pt;
 }
@@ -150,7 +149,6 @@ blockquote{
 }
 #toc li, .toc li{
 	margin: 3px 0px 3px 0px;
-	font-size: 10px;
 }
 /* form elements */
 form {
@@ -161,14 +159,6 @@ form {
 label {
 	display:block;
 	font-weight:bold;
-	margin:5px 0;
-}
-label.error{
-	color: red;
-}
-.inlineLabel {
-	display: inline;
-	font-weight: bold;
 	margin:5px 0;
 }
 input {
@@ -202,11 +192,8 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
 }
 input[type=button][disabled], input[type=submit][disabled],input[type=reset][disabled] {
  background: #f6f6f6;
+ border-style: solid;
  color: #999;
-}
-input[disabled]:hover{
-	background: #f6f6f6;
-	color: #999;
 }
 fieldset{
 	background-color: #f5f5f5;
@@ -226,48 +213,31 @@ textarea{
 }
 input[type=text], input[type=password], input[type=checkbox], select { 
 	font: normal 12px Verdana, sans-serif;
-	color:#777;
 	border: 1px solid #d7d7d7;
-	padding: 5px;
-	background: #FFFFFF url(../images/topfade.gif) repeat-x scroll center top;
+	padding: 3px;
 }
-input[type=text], input[type=password], input[type=checkbox], select { padding: .4em }
+input[type=text], input[type=password], input[type=checkbox], select { padding: .20em .3em }
 input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=checkbox]:focus, select:focus {
 	border: 1px solid #886;
-}
-input[type=text].error, input[type=password].error, input[type=checkbox].error, textarea.error, select.error { 
-	border:1px dotted red;
-}
-/* Validation */
-input.invalidLookupInput, textarea.invalidLookupInput, .invalidLookupInput{
-	border: 1px dotted #F00000;
-	background:#FFECE6;
 }
 .tablelisting{
 	border: 1px solid #cccccc;
 }
 .tablelisting tr{
-	background-color: #F7F7F7;
+	background-color: #eaeaea;
 }
 .tablelisting tr.even{
 	background-color: #ffffff;
 }
 .tablelisting tr:hover { background: #d7eafe}
-
 .tablelisting th {
 	text-align: left;
 	background-color: #999999;
 	color: #ffffff;
 	padding: 5px;
 }
-.tablelisting th.center{
-	text-align:center;
-}
 .tablelisting td{
 	padding: 5px;
-}
-.tablelisting td.center{
-	text-align: center;
 }
 .tablelisting th a {
 	color: #ffffff;
@@ -313,6 +283,7 @@ form.search input.textbox:focus {
 .buttons {
 	text-align: right;
 	margin-top: 10px;
+	clear: both;
 }
 
 /* loader */
@@ -377,7 +348,6 @@ div.grippie {
 	position: absolute;
 	top: 3px; left: 5px;
 	margin: 0; padding: 0;
-	cursor: pointer;
 }
 
 #header-logo #logo h1 {
@@ -507,7 +477,6 @@ div.grippie {
 .inline { display: inline; }
 .clear { clear: both; }
 .red   { color: #CC0000; }
-.green { color: green}
 .blue   { color: #003366; }
 .bold { font-weight: bold; }
 
@@ -581,8 +550,21 @@ div.grippie {
 	background-color: #FCF9C3;
 	border: 1px solid #AF3D15;
 }
-.pagingTabsCarrousel{
-	margin-top:5px;	
+
+
+/* Wiki ToolBars */
+#wikiToolbarRight{
+	float: right;
+	font-size: 10px;
+	margin-right: 5px;
+}
+#wikiToolbarRight label{
+	margin:5px 0;
+	font-weight: bold;
+	display: inline;
+}
+#wikiToolbarRight select{
+	font-size: 10px;
 }
 
 /* Message box */
@@ -615,47 +597,3 @@ div.grippie {
 	margin: 5px 10px 0px 0px;
 	float: right;
 }
-
-.wikiChooser{
-	background: white;
-	border:1px inset #ccc;
-	padding:10px;
-	height:350px;
-	overflow: auto;	
-	display: none;
-}
-
-/* RTE */
-.frameBody
-{
-    font-family:sans-serif;
-    font-size:12px;
-    margin:0;
-    width:100%;
-    height:100%;
-}
-
-.rte-zone
-{
-	width:500px;
-	margin:0;
-	padding:10px;
-	height: 100px;
-	border:1px #999 solid;
-	background: white;
-    clear:both;
-}
-
-.rte-toolbar{ overflow:hidden; }
-
-.rte-toolbar a, .rte-toolbar a img {
-	border:0;
-}
-
-.rte-toolbar p {
-    float:left;
-    margin:0;
-    padding-right: 8px;
-}
-
-/* @end */
