Made the title a link back to the home page. I always click on it, figuring it was a link bck Home.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@179 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -350,11 +350,16 @@ div.grippie {
 	margin: 0; padding: 0;
 }
 
-#header-logo #logo h1 {
+#header-logo #logo h1 a {
 	font: bold 30px "trebuchet MS", Arial, Tahoma, Sans-Serif;
 	margin: 0; padding: 0;
 	letter-spacing: -1px;
 	color: #000;	
+	border: none;
+}
+
+#header-logo #logo h1 a:hover {
+	border-bottom: 1px dotted #000;
 }
 
 /* navigation tabs */
