--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -5,7 +5,6 @@
 	TEMPLATE CODE:		S-0006
    VERSION:          1.1          	
  *******************************************/
- 
 /********************************************
    HTML ELEMENTS
 ********************************************/ 
@@ -15,7 +14,7 @@
 body {
 	margin: 0; padding: 0;
 	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
-	font-size: 74%;
+	font-size: 70%;
 	line-height: 1.5;
 	color: #333; 
 	background: #FFF url(../images/bg.gif) repeat-x;	
@@ -55,6 +54,7 @@ a.noborder{
 	background: #FFFFF0;
 	border: 1px inset #ccc;
 }
+
 
 /* headers */
 h1, h2, h3, h4, h5 {
@@ -137,7 +137,7 @@ blockquote{
 #toc h2, .toc h2 {
 	border:medium none;
 	display:inline;
-	font-size: 16px;
+	font-size: 12px;
 	font-weight:bold;
 	padding:0pt;
 }
@@ -149,6 +149,7 @@ blockquote{
 }
 #toc li, .toc li{
 	margin: 3px 0px 3px 0px;
+	font-size: 10px;
 }
 /* form elements */
 form {
@@ -159,6 +160,14 @@ form {
 label {
 	display:block;
 	font-weight:bold;
+	margin:5px 0;
+}
+label.error{
+	color: red;
+}
+.inlineLabel {
+	display: inline;
+	font-weight: bold;
 	margin:5px 0;
 }
 input {
@@ -192,8 +201,11 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
 }
 input[type=button][disabled], input[type=submit][disabled],input[type=reset][disabled] {
  background: #f6f6f6;
- border-style: solid;
  color: #999;
+}
+input[disabled]:hover{
+	background: #f6f6f6;
+	color: #999;
 }
 fieldset{
 	background-color: #f5f5f5;
@@ -213,31 +225,48 @@ textarea{
 }
 input[type=text], input[type=password], input[type=checkbox], select { 
 	font: normal 12px Verdana, sans-serif;
+	color:#777;
 	border: 1px solid #d7d7d7;
-	padding: 3px;
+	padding: 5px;
+	background: #FFFFFF url(../images/topfade.gif) repeat-x scroll center top;
 }
-input[type=text], input[type=password], input[type=checkbox], select { padding: .20em .3em }
+input[type=text], input[type=password], input[type=checkbox], select { padding: .4em }
 input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=checkbox]:focus, select:focus {
 	border: 1px solid #886;
+}
+input[type=text].error, input[type=password].error, input[type=checkbox].error, textarea.error, select.error { 
+	border:1px dotted red;
+}
+/* Validation */
+input.invalidLookupInput, textarea.invalidLookupInput, .invalidLookupInput{
+	border: 1px dotted #F00000;
+	background:#FFECE6;
 }
 .tablelisting{
 	border: 1px solid #cccccc;
 }
 .tablelisting tr{
-	background-color: #eaeaea;
+	background-color: #F7F7F7;
 }
 .tablelisting tr.even{
 	background-color: #ffffff;
 }
 .tablelisting tr:hover { background: #d7eafe}
+
 .tablelisting th {
 	text-align: left;
 	background-color: #999999;
 	color: #ffffff;
 	padding: 5px;
 }
+.tablelisting th.center{
+	text-align:center;
+}
 .tablelisting td{
 	padding: 5px;
+}
+.tablelisting td.center{
+	text-align: center;
 }
 .tablelisting th a {
 	color: #ffffff;
@@ -283,7 +312,6 @@ form.search input.textbox:focus {
 .buttons {
 	text-align: right;
 	margin-top: 10px;
-	clear: both;
 }
 
 /* loader */
@@ -348,18 +376,14 @@ div.grippie {
 	position: absolute;
 	top: 3px; left: 5px;
 	margin: 0; padding: 0;
+	cursor: pointer;
 }
 
-#header-logo #logo h1 a {
+#header-logo #logo h1 {
 	font: bold 30px "trebuchet MS", Arial, Tahoma, Sans-Serif;
 	margin: 0; padding: 0;
 	letter-spacing: -1px;
 	color: #000;	
-	border: none;
-}
-
-#header-logo #logo h1 a:hover {
-	border-bottom: 1px dotted #000;
 }
 
 /* navigation tabs */
@@ -482,6 +506,7 @@ div.grippie {
 .inline { display: inline; }
 .clear { clear: both; }
 .red   { color: #CC0000; }
+.green { color: green}
 .blue   { color: #003366; }
 .bold { font-weight: bold; }
 
@@ -555,21 +580,8 @@ div.grippie {
 	background-color: #FCF9C3;
 	border: 1px solid #AF3D15;
 }
-
-
-/* Wiki ToolBars */
-#wikiToolbarRight{
-	float: right;
-	font-size: 10px;
-	margin-right: 5px;
-}
-#wikiToolbarRight label{
-	margin:5px 0;
-	font-weight: bold;
-	display: inline;
-}
-#wikiToolbarRight select{
-	font-size: 10px;
+.pagingTabsCarrousel{
+	margin-top:5px;	
 }
 
 /* Message box */
@@ -602,3 +614,47 @@ div.grippie {
 	margin: 5px 10px 0px 0px;
 	float: right;
 }
+
+.wikiChooser{
+	background: white;
+	border:1px inset #ccc;
+	padding:10px;
+	height:350px;
+	overflow: auto;	
+	display: none;
+}
+
+/* RTE */
+.frameBody
+{
+    font-family:sans-serif;
+    font-size:12px;
+    margin:0;
+    width:100%;
+    height:100%;
+}
+
+.rte-zone
+{
+	width:500px;
+	margin:0;
+	padding:10px;
+	height: 100px;
+	border:1px #999 solid;
+	background: white;
+    clear:both;
+}
+
+.rte-toolbar{ overflow:hidden; }
+
+.rte-toolbar a, .rte-toolbar a img {
+	border:0;
+}
+
+.rte-toolbar p {
+    float:left;
+    margin:0;
+    padding-right: 8px;
+}
+
+/* @end */
