Frameworks workbench, so we can include the frameworks the app uses.  Cleanup on code, and css. New create page button.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@189 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -385,6 +385,10 @@ div.grippie {
 	letter-spacing: -1px;
 	color: #000;	
 }
+#header-logo #logo h1 a{
+	border: none;	
+	color: black;
+}
 
 /* navigation tabs */
 #header ul {
