Tons of updates to migration for namespace dates, new namespace rss syntaxes.  Abstractions to core, updates to source files, etc.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@233 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/scripts/markitup/skins/markitup/style.css
+++ b/src/includes/scripts/markitup/skins/markitup/style.css
@@ -30,6 +30,7 @@
 	width:94%;
 	margin:auto;
 	height:320px;
+	background: #FAFAFA;
 	background-image:url(images/bg-editor.png);
 	background-repeat:no-repeat;
 	display:block;
