nice page dialogs. One datasource in main coldbox.xml updates to 404 errors and pages
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@246 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -530,6 +530,10 @@ div.grippie {
 }
 
 /* AJAX UI ELements */
+.loadingContainer{
+	text-align: center;
+	padding-top: 20px;	
+}
 .loading {
 	background-image:  url("../images/loading.gif");
 	background-position: left center;
