--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -250,8 +250,20 @@ input.invalidLookupInput, textarea.invalidLookupInput, .invalidLookupInput{
 	border: 1px dotted #F00000;
 	background:#FFECE6;
 }
+
+/* Table Listings */
+#actions{
+	width: 60px;
+	text-align:center;	
+}
+#checkboxHolder{
+	width: 20px;
+	text-align:center;	
+}
 .tablelisting{
-	border: 1px solid #cccccc;
+	background-color: #CDCDCD;
+	margin:10px 0pt 15px;
+	border-spacing: 1px;
 }
 .tablelisting tr{
 	background-color: #F7F7F7;
@@ -260,24 +272,16 @@ input.invalidLookupInput, textarea.invalidLookupInput, .invalidLookupInput{
 	background-color: #ffffff;
 }
 .tablelisting tr:hover { background: #d7eafe}
-
 .tablelisting th {
 	text-align: left;
-	background-color: #999999;
-	color: #ffffff;
-	padding: 5px;
+	background-color: #E0EFEF;
+	padding: 4px;
 }
 .tablelisting th.center{
 	text-align:center;
 }
-.tablelisting td{
-	padding: 5px;
-}
-.tablelisting td.center{
-	text-align: center;
-}
 .tablelisting th a {
-	color: #ffffff;
+	color: #000;
 	background-color: inherit;
 	text-decoration: none;
 	border-bottom: none;
@@ -285,6 +289,12 @@ input.invalidLookupInput, textarea.invalidLookupInput, .invalidLookupInput{
 .tablelisting th a:hover {
 	color: #CC0001; 
 	background-color: inherit;	
+}
+.tablelisting td{
+	padding: 5px;
+}
+.tablelisting td.center{
+	text-align: center;
 }
 .tablelisting a {
 	text-decoration: none;
