--- a/src/includes/lookups/styles/lookups.css
+++ b/src/includes/lookups/styles/lookups.css
@@ -1,50 +1,3 @@
-/*
-Table Listing
-*/
-.tablelisting{
-	border: 1px solid #cccccc;
-}
-.tablelisting tr{
-	background-color: #eaeaea;
-}
-.tablelisting tr.even{
-	background-color: #ffffff;
-}
-.tablelisting tr:hover { background: #d7eafe}
-.tablelisting th {
-	text-align: left;
-	background-color: #999999;
-	color: #ffffff;
-	padding: 5px;
-}
-.tablelisting td{
-	padding: 5px;
-}
-.tablelisting th a {
-	color: #ffffff;
-	background-color: inherit;
-	text-decoration: none;
-	border-bottom: none;
-}
-.tablelisting th a:hover {
-	color: #CC0001; 
-	background-color: inherit;	
-}
-.tablelisting a {
-	text-decoration: none;
-	border-bottom: none;
-}
-.tablelisting a:hover {
-	color: #CC0001; 
-	background-color: inherit;	
-}
-.tablelisting #checkboxHolder{
-	width: 20px;
-}
-.tablelisting #actions{
-	text-align: center;
-	width: 60px;
-}
 /* loader */
 .formloader {
 	margin:3px 5px 0px 0px;
@@ -92,9 +45,101 @@ Table Listing
 #formFinalizer{
 	margin-top: 25px;
 }
+#actions{
+	width: 60px;
+	text-align:center;	
+}
+#checkboxHolder{
+	width: 20px;
+	text-align:center;	
+}
 .booleanSelect{
 	width: 150px;
 }
+label {
+	display:block;
+	font-weight:bold;
+	margin:5px 0;
+}
+label.error{
+	color: red;
+}
+label.helptext{
+	font-weight: normal;
+}
+.inlineLabel {
+	display: inline;
+	font-weight: bold;
+	margin:5px 0;
+}
+label.light{
+	display: inline;
+	font-weight: normal;
+}
+/* INputs */
+input {
+	padding: 2px;
+	border:1px solid #eee;
+	font: normal 1em;
+	color:#333;
+}
+input[type=button], input[type=submit], input[type=reset] { 
+	margin: 0; 
+	font-size: 100%; 
+	font-family: Arial, Sans-serif; 
+	border: 1px solid #CCC; 
+	background: #FFFFFF url(../images/headerbg.gif) repeat-x bottom left; 
+	padding: 5px; 
+	font-weight: bold; 
+	color: #333;
+	cursor: pointer;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-khtml-border-radius: 5px;
+}
+input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
+ background: #FFFFF0;
+ border: 1px inset #ccc;
+}
+input[type=button][disabled], input[type=submit][disabled],input[type=reset][disabled] {
+ background: #f6f6f6;
+ color: #999;
+}
+input[disabled]:hover{
+	background: #f6f6f6;
+	color: #999;
+}
+fieldset{
+	background-color: #f5f5f5;
+	border: 1px solid #ddd;
+	margin: 10px;
+}
+legend{
+	color: #003366;
+	font-weight: bold;
+	font-size: 12px;
+}
+textarea{
+	font: normal 12px;
+	border: 1px solid #d7d7d7;
+	padding:2px;
+	width: 100%;
+}
+input[type=text], input[type=password], input[type=checkbox], select { 
+	font: normal 12px;
+	color:#333;
+	border: 1px solid #d7d7d7;
+	padding: 5px;
+	background: #FFFFFF url(../images/topfade.gif) repeat-x scroll center top;
+}
+input[type=text], input[type=password], input[type=checkbox], select { padding: .4em }
+input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=checkbox]:focus, select:focus {
+	border: 1px solid #886;
+}
+input[type=text].error, input[type=password].error, input[type=checkbox].error, textarea.error, select.error { 
+	border:1px dotted red;
+}
+
 input.invalidLookupInput, textarea.invalidLookupInput, .invalidLookupInput{
 	border: 1px dotted #F00000;
 	background:#FFECE6 url(../images/topfade.gif) repeat-x scroll center top;
