Basic namespace administration finished.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@278 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -304,6 +304,10 @@ input.invalidLookupInput, textarea.invalidLookupInput, .invalidLookupInput{
 	color: #CC0001; 
 	background-color: inherit;	
 }
+.tablesorter td.center{
+	text-align: center;
+}
+
 /* search form */
 form.search {
 	position: absolute;
