--- a/src/includes/scripts/markitup/skins/markitup/style.css
+++ b/src/includes/scripts/markitup/skins/markitup/style.css
@@ -3,8 +3,9 @@
 // By Jay Salvat - http://markitup.jaysalvat.com/
 // ------------------------------------------------------------------*/
 .markItUp * {
-	margin:0px; padding:0px;
-	outline:none;
+	margin: 0px; 
+	padding:0px;
+	outline: none;
 }
 .markItUp a:link,
 .markItUp a:visited {
@@ -15,7 +16,7 @@
 .markItUp  {
 	margin:5px 0 5px 0;
 	border:5px solid #F5F5F5;
-	width:100%;	
+	width: 98%;	
 }
 .markItUpContainer  {
 	border:1px solid #3C769D;	
