--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -715,3 +715,39 @@ div.grippie {
 	text-align: left;
 }
 /* @end */
+
+/* Wiki ID Styles */
+div#categories {
+	border: 1px solid #cccccc;
+	text-align: right;
+	margin-top: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-weight: bold;
+	background: #CFE4FF;
+}
+div#categories ul {
+	display: inline;
+	margin: 0;
+	padding: 0 0 0 10px;
+	font-weight: normal;
+}
+div#categories ul li {
+	display: inline;
+	margin: 0px;
+	padding: 0 10px 0 0;
+	font-weight: normal;
+}
+#downloadFormatsBar{
+	margin:30px 0px 10px 0px;
+	text-align:center;
+}
+#wikiTopToolbar{
+	text-align: right;
+	margin: 5px 0px 15px 0px;
+}
+#wikiPageActionBar{
+	text-align: right;
+	margin-top: 20px;
+	
+}
