finalization of bunch of category updates.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@292 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -335,7 +335,7 @@ form.search input.textbox:focus {
 
 .buttons {
 	text-align: right;
-	margin-top: 10px;
+	margin: 10px 5px 0px 0px;
 }
 
 /* loader */
@@ -750,4 +750,7 @@ div#categories ul li {
 	text-align: right;
 	margin-top: 20px;
 	
+}
+#contentCategories{
+	width: 98%;
 }
