xhtml for images
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@312 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -19,7 +19,9 @@ body {
 	color: #333; 
 	background: #FFF url(../images/bg.gif) repeat-x;	
 }
-
+img{
+	vertical-align: middle;	
+}
 /* links */
 a {
 	color: #0058AF;
