lots of updates to config service standards, fixes to rewrite extensions, rewrite encapsulation on config service and new coldbox framework.
git-svn-id: http://subversion.assembla.com/svn/codexwiki/codexwiki/trunk@318 2d3ac0e7-283b-0410-8642-a0a6206fc8d4

--- a/src/includes/css/style.css
+++ b/src/includes/css/style.css
@@ -491,6 +491,9 @@ div.grippie {
 	background: #333; 
 	letter-spacing: 1px;	
 	cursor: pointer;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-khtml-border-radius: 5px;
 }
 #sidebar h1:hover {
 	color: orange;
@@ -499,6 +502,9 @@ div.grippie {
 	border: 1px solid #EBEBEB;
 	margin: 0 0 5px 0;	
 	background: #FFF;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-khtml-border-radius: 5px;
 }
 #sidebar ul.sidemenu {
 	list-style: none;
